updated jumbotron to be below navbar
new js file with couple lines of code reading the navbar height

--- a/rebuilding.html
+++ b/rebuilding.html
@@ -39,7 +39,7 @@
     <!-- Jumbotron Header -->
     <div class="jumbotron text-center">
         <div class ="container">
-            <br>
+            
             <h1 class="font-weight-bold">Retraining</h1>
             <br>
             <blockquote class="blockquote">
@@ -99,5 +99,6 @@
     <!-- Optional JavaScript -->
         <script src="js/jquery-3.3.1.slim.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/portfolio.js"></script>
   </body>
 </html>
