--- a/future.html
+++ b/future.html
@@ -43,7 +43,7 @@
     <!-- Jumbotron Header -->
     <div class="jumbotron text-center">
         <div class ="container">
-            <br>
+            
             <h1 class="font-weight-bold">The Finish Line</h1>
             <br>
             <blockquote class="blockquote">
@@ -113,6 +113,7 @@
     <!-- Optional JavaScript -->
         <script src="js/jquery-3.3.1.slim.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/portfolio.js"></script>
       
   </body>
 </html>
