--- a/future.html
+++ b/future.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #f72222">
         <div class="container">
-      <a class="navbar-brand" href="index.html">Kai's Portfolio</a>
+      <a class="navbar-brand" href="index.html">Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
