--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #f72222">
         <div class="container">
-      <a class="navbar-brand" href="index.html">Kai's Portfolio</a>
+      <a class="navbar-brand" href="index.html">Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +39,7 @@
     <div class="jumbotron text-center">
         <div class ="container">
             <h1 class="display-4 font-weight-bold">Marathon of Life</h1>
-            <h3>Kai Mizuno's IDEAS Portfolio</h3>
+            <h3>IDEAS Portfolio</h3>
             <br>
             <blockquote class="blockquote">
                 <h6 class="mb-0">"I love the man that can smile in trouble, that can gather strength from distress, and grow brave by reflection. 'Tis the business of little minds to shrink, but he whose heart is firm, and whose conscience approves his conduct, will pursue his principles unto death."</h6>
